# llmzoomcamp

week1-agentic-rag/: README.md  agents.ipynb  homework.ipynb  ingest.py  notebook.ipynb  pyproject.toml  rag.ipynb
week2-vector-search/: README.md  vector_search.ipynb  vector_search_persistant.ipynb  vector_search_pgvector.ipynb
week2-vector-search/llm-zoomcamp-hw2/: homework.ipynb
